--- a/.github/workflows/build_and_deploy.yaml
+++ b/.github/workflows/build_and_deploy.yaml
@@ -1,59 +1,59 @@
-# For more info on Python, GitHub Actions, and Azure App Service 
+# For more info on Python, GitHub Actions, and Azure App Service
 # please head to https://aka.ms/python-webapps-actions
 
 name: Build and deploy Flask + Vue.js app to Azure App Service
 
 on:
   push:
-    branches: 
+    branches:
       - main
 
 env:
-  WEBAPP_NAME: 'cmsommerville-01'             # Replace with the name of your Azure web app
-  RESOURCE_GROUP: 'rg-cmsommerville-01'   # Replace with the name of your Resource Group
+  WEBAPP_NAME: "cmsommerville-01" # Replace with the name of your Azure web app
+  RESOURCE_GROUP: "rg-cmsommerville-01" # Replace with the name of your Resource Group
 
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.6
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.6
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v1
-      with:
-        node-version: 12
+      - name: Set up Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12
 
-    - name: Install and build Vue.js project
-      run: |
-        npm install
-        npm run build
+      - name: Install and build Vue.js project
+        run: |
+          npm install
+          npm run build
 
-    - name: Create and start virtual environment
-      run: |
-        python3 -m venv venv
-        source venv/bin/activate
+      - name: Create and start virtual environment
+        run: |
+          python3 -m venv venv
+          source venv/bin/activate
 
-    - name: Install dependencies
-      run: pip install -r requirements.txt
+      - name: Install dependencies
+        run: pip install -r requirements.txt
 
-    # - name: test with PyTest
-    #   run: pytest --cov=app --cov-report=xml
+      # - name: test with PyTest
+      #   run: pytest --cov=app --cov-report=xml
 
-    - name: Upload artifact for deployment jobs
-      uses: actions/upload-artifact@v2
-      with:
-        name: python-app
-        path: |
-          . 
-          !node_modules/
-          !venv/
-  
+      - name: Upload artifact for deployment jobs
+        uses: actions/upload-artifact@v2
+        with:
+          name: python-app
+          path: |
+            . 
+            !node_modules/
+            !venv/
+
   deploy-to-webapp:
     needs: build-and-test
     runs-on: ubuntu-latest
@@ -72,7 +72,7 @@ jobs:
 
       - name: Configure deployment and runtime settings on the webapp
         run: |
-          az configure --defaults ${{ env.RESOURCE_GROUP }}
+          az configure --defaults group=${{ env.RESOURCE_GROUP }}
           az webapp config appsettings --name ${{ env.WEBAPP_NAME }} --settings \
               SCM_DO_BUILD_DURING_DEPLOYMENT=true \
               FLASK_ENV=production 
